[package]
name = "labelrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
egui_extras = { version = "*", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["jpeg"] }
palette = "*"
alphanumeric-sort = "*"
glob = "*"
anyhow = "*"
clap = { version = "4.0.29", features = ["derive"] }
